--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="/asm4/css/home.css">
+        <link rel="stylesheet" href="asm4/css/sitemap.xml">
 </head>
 
 <body>
