--- a/otherwebsite.html
+++ b/otherwebsite.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASM3 RESPONSIVE</title>
     <link rel="stylesheet" href="/asm4/css/otherwebsite.css">
+        <link rel="stylesheet" href="asm4/css/sitemap.xml">
 </head>
 
 <body>
